--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,6 +2,7 @@
 // http://ionicframework.com/docs/theming/
 
 /** Ionic CSS Variables **/
+$border-color:"#f0f0f0";
 :root {
   /** primary **/
   --ion-color-primary: #3880ff;
