--- a/src/app/product-details/product-details.page.html
+++ b/src/app/product-details/product-details.page.html
@@ -3,7 +3,9 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Product Details</ion-title>
+    <ion-title>Product Details
+    <ion-icon size="large" routerLink="/basket-list" class="ion-float-right" name="cart-outline"></ion-icon>
+  </ion-title>
   </ion-toolbar>
 </ion-header>
 
