--- a/src/app/product-list/product-list.page.html
+++ b/src/app/product-list/product-list.page.html
@@ -1,12 +1,78 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Product List</ion-title>
+<ion-header  >
+  <ion-toolbar class="p-2">
+   <ion-label slot="start" >{{total_list_items}} items</ion-label>
+    <ion-button slot="end">
+      <ion-icon name="filter-outline"></ion-icon> sort</ion-button>
+    <ion-button slot="end"> 
+      <ion-icon name="funnel-outline"></ion-icon> filter</ion-button>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-button color="primary" routerLink="/product-details">Details</ion-button>
+  <ion-content fullscreen>
+    <ion-list>
+      <ion-item *ngFor="let productitem of productlist">
+        <ion-grid>
+        <ion-row>
+          <ion-col size="5">
+              <img src="{{productitem.imageUrl}}" routerLink="/product-details" >
+          </ion-col>
+          <ion-col size="7">
+            <ion-label class="pb-2" >
+              <h2 routerLink="/product-details" >{{productitem.brandName}}</h2>
+              <h3 routerLink="/product-details">{{productitem.branditem}}</h3>
+            </ion-label>
+              <ion-select class="p-4">
+                <ion-select-option *ngFor="let item of productitem.quantitycol" [value]="item.itemCount" >{{item.itemCount}} kg</ion-select-option>
+              </ion-select>
+              <ion-row class="p-0">
+                <ion-col size="5">
+                <ion-label >
+                  <h3 class="text-strike">{{productitem.mrpPrices}}</h3>
+                  <h2><p> {{productitem.offerPrices}}</h2>
+                </ion-label>
+                </ion-col>
+                <ion-col size="7"> 
+                   <ion-button  class="item-btn"  color="danger" *ngIf="cartCount===0" 
+                   (click)="handleCart('add')">
+                  Add
+                </ion-button>
+                  <ion-row  class="addCartCount" color="danger"  *ngIf="cartCount>0">
+                    <ion-col (click)="handleCart('remove')" size="4">
+                      <ion-icon name="remove-circle-outline"></ion-icon>
+                    </ion-col>
+                    <ion-col size="4">{{cartCount}}</ion-col>
+                    <ion-col (click)="handleCart('add')" size="4">
+                      <ion-icon name="add-circle-outline"></ion-icon>
+                    </ion-col>
+                  </ion-row>
+                </ion-col>
+              </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      </ion-item>
+
+</ion-list>
 </ion-content>
+
+<!-- 
+<ion-content fullscreen>
+  <ion-list>
+    <ion-list-header>
+      Recent Conversations
+    </ion-list-header>
+
+    <ion-item>
+      <ion-thumbnail slot="start">
+        <img src="/assets/images/mango3.png">
+      </ion-thumbnail>
+      <ion-label>
+        <h2>Finn</h2>
+        <h3>I'm a big deal</h3>
+      </ion-label>
+    </ion-item>
+    </ion-list>
+    </ion-content> -->
+ 
+
+
