--- a/src/app/basket-list/basket-list.page.html
+++ b/src/app/basket-list/basket-list.page.html
@@ -10,6 +10,8 @@
       <ion-label>Fruits & Vegetables</ion-label>      
     </ion-list-header>
     <ion-item *ngFor="let item of items; let i=index" lines="full">
+      <ion-item-sliding>
+        <ion-item lines="none">
       <ion-row class="contents">
         <ion-col size="4">
           <img [src]="item.url" [alt]="'Mango Item'+i" />
@@ -40,6 +42,18 @@
           </ion-row>
         </ion-col>
       </ion-row>
+    </ion-item>
+      <ion-item-options>
+        <!-- <ion-item-option color="primary">
+          <ion-icon slot="top" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
+          More
+        </ion-item-option> -->
+        <ion-item-option (click)="deleteItem(i)" color="dark">
+          <ion-icon slot="top" name="trash-outline"></ion-icon>
+          Delete
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
     </ion-item>
   </ion-list>
 </ion-content>
