--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,11 +11,11 @@ ion-content{
     }
     .category{
         text-align: center;
-        ion-card-header{
-            --background: red;
-        }   
+        // ion-card-header{
+        //     // --background: red;
+        // }   
         ion-col:nth-child(odd){
-            border-right: 0.5px solid rgb(238, 238, 238);
+            border-right: 1px solid rgb(238, 238, 238);
         }     
         img{
             height: 10rem;
